--- a/src/pages/OneCasePage/OneCasePage.scss
+++ b/src/pages/OneCasePage/OneCasePage.scss
@@ -79,10 +79,6 @@
     }
 }
 
-#itoutsourcing {
-    border-bottom: 0px;
-}
-
 @media (min-width: $mobile) and (max-width: $tablet) {
     .oneCasePage {
         margin-top: 50px;
